Added error middleware

--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,3 @@
 MONGO_URL=mongodb+srv://engombeel13:slTd8w7XdCkN0QhB@occultpodcluster.sbtu3yq.mongodb.net/?retryWrites=true&w=majority
 PORT=5000
+NODE_ENV=development
