--- a/package.json
+++ b/package.json
@@ -1,1 +1,29 @@
-{}
+{
+  "name": "occultpod-web",
+  "description": "A full-stack podcast website",
+  "version": "1.0.0",
+  "main": "../backend/server.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "cd backend && nodemon server.js",
+    "server": "nodemon backend/server.js",
+    "client": "npm start --prefix frontend",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
+  },
+  "dependencies": {
+    "cors": "^2.8.5",
+    "dotenv": "^16.3.1",
+    "express": "^4.18.2",
+    "express-async-handler": "^1.2.0",
+    "mongodb": "^6.3.0",
+    "mongoose": "^8.0.3",
+    "node-cron": "^3.0.3",
+    "rss-parser": "^3.13.0",
+    "slugify": "^1.6.6"
+  },
+  "devDependencies": {
+    "nodemon": "^3.0.2"
+  },
+  "author": "Engombe Lokanga",
+  "license": "ISC"
+}
