--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "../backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd backend && nodemon server.js",
-    "server": "nodemon backend/server.js",
+    "start": "cd backend && node server.js",
+    "server": "node backend/server.js",
     "client": "npm start --prefix frontend",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
