--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "../backend/server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "cd backend && node server.js",
-    "server": "node backend/server.js",
+    "start": "cd backend && nodemon server.js",
+    "server": "nodemon backend/server.js",
     "client": "npm start --prefix frontend",
     "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix frontend && npm run build --prefix frontend"
   },
@@ -18,11 +18,9 @@
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.3",
     "node-cron": "^3.0.3",
+    "nodemon": "^3.0.2",
     "rss-parser": "^3.13.0",
     "slugify": "^1.6.6"
-  },
-  "devDependencies": {
-    "nodemon": "^3.0.2"
   },
   "author": "Engombe Lokanga",
   "license": "ISC"
